Some grid refactoring. ref #671
* Added injection
* Changed load/save to take inputstreams
* Use template data instead of manually constructed ddf-messages

--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -34,11 +34,11 @@
             id="com.dynamo.cr.tileeditor.resourcetypes.TileGrid"
             name="Tile Grid"
             proto-message-class="com.dynamo.tile.proto.Tile$TileGrid"
-            template-data="tile_set: &quot;&quot; cell_width: 32 cell_height: 32"
-            type-class="tile_set">
+            template-data="tile_set: &quot;&quot; cell_width: 16 cell_height: 16 layers: {id: &quot;layer1&quot; z: 0 is_visible: 1}"
+            type-class="tile_grid">
          <references>
             <reference-type-class
-                  type-class="image">
+                  type-class="tile_set">
             </reference-type-class>
          </references>
       </resource-type>
