--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -80,6 +80,7 @@
     <modules>
         <module>../org.mockito</module>
         <module>../com.google.common</module>
+        <module>../com.google.inject</module>
         <module>../com.dynamo.cr.common</module>
         <module>../com.dynamo.cr.common.test</module>
         <module>../com.dynamo.cr.editor</module>
