--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -12,6 +12,15 @@
             id="com.dynamo.cr.tileeditor.TileSetEditor"
             name="Tile Set Editor">
       </editor>
+      <editor
+            class="com.dynamo.cr.tileeditor.GridEditor"
+            contributorClass="com.dynamo.cr.tileeditor.GridEditorActionBarContributor"
+            default="false"
+            extensions="tilegrid"
+            icon="icons/tile_grid.png"
+            id="com.dynamo.cr.tileeditor.GridEditor"
+            name="Tile Grid Editor">
+      </editor>
    </extension>
    <extension
          point="com.dynamo.cr.resourcetypes">
@@ -30,7 +39,7 @@
          </references>
       </resource-type>
       <resource-type
-            file-extension="grid"
+            file-extension="tilegrid"
             id="com.dynamo.cr.tileeditor.resourcetypes.TileGrid"
             name="Tile Grid"
             proto-message-class="com.dynamo.tile.proto.Tile$TileGrid"
@@ -52,6 +61,13 @@
             id="com.dynamo.cr.tileeditor.wizards.TileSetNewWizard"
             name="Tile Set">
       </wizard>
+      <wizard
+            category="com.dynamo.cr.editor.wizardCategory"
+            class="com.dynamo.cr.tileeditor.wizards.GridNewWizard"
+            icon="icons/tile_grid.png"
+            id="com.dynamo.cr.tileeditor.wizards.GridNewWizard"
+            name="Tile Grid">
+      </wizard>
    </extension>
    <extension
          point="org.eclipse.ui.perspectiveExtensions">
@@ -69,12 +85,21 @@
             wizardId="com.dynamo.cr.tileeditor.wizards.TileSetNewWizard">
          <enablement></enablement>
       </commonWizard>
+      <commonWizard
+            type="new"
+            wizardId="com.dynamo.cr.tileeditor.wizards.GridNewWizard">
+         <enablement></enablement>
+      </commonWizard>
    </extension>
    <extension
          point="org.eclipse.ui.contexts">
       <context
             id="com.dynamo.cr.tileeditor.contexts.TileSetEditor"
             name="Tile Set Editor">
+      </context>
+      <context
+            id="com.dynamo.cr.tileeditor.contexts.GridEditor"
+            name="Tile Grid Editor">
       </context>
    </extension>
    <extension
@@ -420,6 +445,19 @@
                   operator="or">
                <equals
                      value="com.dynamo.cr.tileeditor.contexts.TileSetEditor">
+               </equals>
+            </iterate>
+         </with>
+      </definition>
+      <definition
+            id="com.dynamo.cr.tileeditor.definitions.gridEditorActive">
+         <with
+               variable="activeContexts">
+            <iterate
+                  ifEmpty="false"
+                  operator="or">
+               <equals
+                     value="com.dynamo.cr.tileeditor.contexts.GridEditor">
                </equals>
             </iterate>
          </with>
