Moved common tile-code to engine ref #678

--- a/com.dynamo.cr.common/.classpath
+++ b/com.dynamo.cr.common/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/share/java/tile.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-client-1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-core-1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/vecmath.jar"/>
