--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -19,4 +19,5 @@ bin.includes = META-INF/,\
                DYNAMO_HOME/share/java/fontc.jar,\
                ext/vecmath.jar,\
                ext/jersey-client-1.8.jar,\
-               ext/jersey-core-1.8.jar
+               ext/jersey-core-1.8.jar,\
+               DYNAMO_HOME/share/java/tile.jar
