Use vecmath.jar from DYNAMO_HOME

--- a/com.dynamo.cr.common/.classpath
+++ b/com.dynamo.cr.common/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/ext/share/java/vecmath.jar"/>
 	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/share/java/tile.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-client-1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-core-1.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="ext/vecmath.jar"/>
 	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/share/java/fontc.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/commons-io-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jackson-core-asl-1.7.1.jar"/>
