--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -17,7 +17,7 @@ bin.includes = META-INF/,\
                ext/jackson-mapper-asl-1.7.1.jar,\
                ext/commons-io-2.0.1.jar,\
                DYNAMO_HOME/share/java/fontc.jar,\
-               ext/vecmath.jar,\
                ext/jersey-client-1.8.jar,\
                ext/jersey-core-1.8.jar,\
-               DYNAMO_HOME/share/java/tile.jar
+               DYNAMO_HOME/share/java/tile.jar,\
+               DYNAMO_HOME/ext/share/java/vecmath.jar
